syntax = "proto3";

package login;

message User {
  string email = 1;
  string token = 2;
  int64 token_refresh  = 3;
}

message AuthenticateRequest {
  string token = 1;
}

message AuthenticateResponse {
}

message LoginRequest{
  string token = 1;
}

message LoginResponse {
}

service LoginService {
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {};
  rpc Login(LoginRequest) returns (LoginResponse) {};
}